--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "https://slack.dev/bolt",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "bin/bolt"
   },
   "repository": {
     "type": "git",
